IMP-9 fix: adjusted the alignment of images and made responsive

--- a/src/components/product-cards/product-card-7/styles/card.css
+++ b/src/components/product-cards/product-card-7/styles/card.css
@@ -103,11 +103,13 @@
     padding-left: 15%;
   }
   .pname {
-    margin-right: 30px;
+    margin-right: 54px;
+    margin-top: -20px;
    }
    .product-title {
     width: 100%;
     margin-left: 50%;
+    margin-top: -30px;
    }
 
 } 
